--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.10",
+    "@heroicons/react": "^2.0.15",
     "@next/font": "13.1.6",
     "@preline/tabs": "^1.3.1",
     "glightbox": "^3.2.0",
     "next": "13.1.6",
-    "preline": "^1.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swiper": "^9.0.0"
